# EFD-PINNs-New

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_WIKI.md  LICENSE  README.md  evaluate.py  nohup.out  pyproject.toml  pyproject.toml.bak_20260601  review_report.md  train_two_phase.py
.mimocode/plans/: 1781427059811-eager-comet.md
config/: device_calibrated_physics.json  v4.5-physics-sampling.json  v4.5-standard.json  v4.6-optimized.json  v4.6-optimized.json.bak_20260605_105644  v4.6-optimized.json.bak_fix6  v4.6-pfw-z0driven-v19opt.json  v4.6-standard.json
config/ablation/: no_continuity.json  no_interface.json  no_vof.json  single_stage.json
config/archive/: v4.5-physics-sampling.json  v4.5-standard.json  v4.6-standard.json
docs/: CONFIG_GUIDE.md  CONTRIBUTING.md  PROJECT_OVERVIEW.md  README.md  data_generation_analysis.md
docs/api/: README.md  core_models.md  examples_and_best_practices.md  physics_constraints.md  training_system.md
docs/architecture/: model_architecture.md  system_design.md
docs/architecture/design_evolution/: EWOD_SinglePixel_PINN_V2.0.md  Project_Roadmap.md  The EFD3D Multiphysics PINN System — from Governing Equations to Device-Level Validation.md  contact-line-physics-analysis.md  dynamic_response.md  interface_sharpening_volume_conservation.md  loss_function_design.md  physics_refactor_checklist.md  pinn_input_redesign.md  sampling_strategy.md  stage2_architecture.md  validation_framework.md
docs/architecture/problem_analysis/: volume_conservation_complete_analysis.md
docs/guides/: configuration_guide.md  data-generation-core.md  data_sampling_evolution.md  dependencies.md  ink_dynamics_analysis.md  installation.md  physics_and_device_guide.md  quickstart.md  scripts_guide.md  training_guide.md  troubleshooting.md  usage.md  visualization_guide.md
docs/reports/: 2026-05-28-refactor.md
docs/research/: KNOWLEDGE_BASE_SUPPLEMENT.md  dashboard_functionality_summary.md  dashboard_quick_start.md  dashboard_report.md  deep_dive_guide.md  deep_understanding_guide.md  training_reports.md  v1-v18-experiment-log.md
docs/suggestions/: constraints_review.md  physics_sampling_review.md  pinn_two_phase_review.md
outputs/: SESSION_REPORT.md  SESSION_SUMMARY.md  test_droplet.py  test_pinning.py  test_slip.py
outputs/ablation/smaller_network_20260322_043943/: config.json
outputs/train/pinn_20260306_105553/: config.json
outputs/train/pinn_20260319_120821/: config.json
outputs/train/pinn_20260320_040329/: config.json
outputs/train/pinn_20260320_202048/: config.json
outputs/train/pinn_20260321_124610/: config.json
outputs/train/pinn_20260322_043947/: config.json
outputs/train/pinn_20260513_140711/: config.json
outputs/train/pinn_20260514_181419/: config.json
outputs/train/pinn_20260515_113251/: config.json
scripts/: ablation_eval.py  ablation_results.json  code_review_helper.py  compare_configs.py  dashboard.py  eval_aperture.py  eval_oil_film.py  eval_oil_film_best.py  run_ablation.sh  verify_ablation.py  verify_config_weights.py
src/: __init__.py
src/config/: README.md  __init__.py  device_calibrated_physics.json  paths.py  physics_config.py  physics_config.py.bak_ac_fix  physics_config.py.bak_fix6  v4.6-optimized.json
src/dashboard/: __init__.py  app.py  benchmark_panel.py  compare_panel.py  datastore.py  export_utils.py  inference.py  model_manager.py  plotter.py  stage1_panel.py  training_output_analyzer.py
src/data/: __init__.py  physics_sampling.py  physics_sampling.py.bak.20260612  physics_sampling.py.bak_20260605  physics_sampling.py.bak_print
src/models/: __init__.py  aperture_model.py  aperture_model.py.bak.20260612  pinn_data_generator.py  pinn_network.py  pinn_physics_loss.py  pinn_trainer_base.py  pinn_trainer_loop.py  pinn_two_phase.py  pinn_two_phase.py.bak.20260610  pinn_two_phase.py.bak.20260611  pinn_two_phase.py.bak.20260611_1735  pinn_two_phase.py.bak.20260611_1835  pinn_two_phase.py.bak.20260611_nan_fix  pinn_two_phase.py.bak.20260612  pinn_two_phase.py.bak.20260614  pinn_two_phase.py.bak.20260614_2  pinn_two_phase.py.bak.20260615  pinn_two_phase.py.bak_20260605_153000  pinn_two_phase.py.bak_20260605_171000  pinn_two_phase.py.bak_redundant
src/physics/: constraints.py  constraints.py.bak.20260611  constraints.py.bak2_20260610  constraints.py.bak_20260610  constraints.py.bak_fix6  constraints.py.bak_redundant  constraints.py.bak_v73  constraints_deprecated.py
src/predictors/: hybrid_predictor.py  pinn_aperture.py  pinn_aperture.py.bak_print
src/solvers/: flow_solver.py
src/training/: __init__.py  components.py  scheduler.py  stabilizer.py
src/utils/: __init__.py  gradients.py  logging_config.py  model_utils.py
tests/: analyze_model_outputs.py  analyze_results.py  test_code_changes.py  test_curvature_computation.py  test_dynamic_weights.py  test_enhanced_aperture_properties.py  test_ew_residual.py  test_ew_source.py  test_ew_source_v2.py  test_flow_solver_properties.py  test_hybrid_predictor.py  test_model_dimensions.py  test_physics_sanity.py  test_physics_sanity.py.bak.20260602  test_pinn_complete.py  test_scripts_framework.py  test_two_phase_data_generator.py  test_vertical_sampling.py  test_vof_3d.py  test_vof_sensitivity.py  test_vof_sensitivity.py.bak.20260602  test_vof_transport.py  verify_fixes.py
tests/.bak_20260601/: analyze_model_outputs.py  test_ew_residual.py  test_ew_source.py  test_ew_source_v2.py  test_pinn_complete.py  verify_fixes.py
(+17 files in other folders)
